2012-03-11 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic16/libdev/pic18f1330.c:
	  add dummy SSPBUF symbol as required by __stream_putchar/printf
	* device/non-free/lib/pic16/libdev/testall.sh:
	  test using printf_tiny() for greater confidence

2012-03-14 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/sdcdb.c, src/mcs51/gen.c, src/SDCCopt.c,
	  src/hc08/gen.c, src/hc08/ralloc.c, src/ds390/gen.c,
	  src/ds390/ralloc.c, sim/ucsim/cmd.src/cmdset.cc,
	  sim/ucsim/cmd.src/cmdstat.cc, sim/ucsim/cmd.src/cmdgui.cc,
	  sim/ucsim/z80.src/inst.cci, sdas/asxxsrc/asout.c:
	  fixed gcc 4.6.1 warnimgs, mainly warning: 'xxx' may be used
	  uninitialized in this function [-Wuninitialized] 

2012-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  support/regression/tests/bug3502965.c:
	  Fixed bug #3502965.
	* support/regression/tests/gcc-torture-execute-20030209-1.c,
	  support/regression/tests/gcc-torture-execute-20031012-1.c:
	  Added explanation for why tests don't work on gbz80.
	* src/SDCCmain.c:
	  Reenable non-compliant SDCC macros (but not for --std-c89, --std-c99, --std-c11).
	* src/z80/ralloc2.cc:
	  More flecible handling of accumulator in multipliation and return.

2012-03-14 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/include/*, device/non-free/lib/*:
	  added info about "The header files should state that they are
	  only to be used with authentic Microchip devices" Microchip
	  requirement and GPL incompatibility

2012-03-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20010224-1.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Disable tests for gcc older than 5.0.

2012-03-13 Borut Razem <borut.razem AT gmail.com>

	* device/include/*, device/lib/*: corrected GPL license version
	  from 2.1 to 2: GPLv2.1 does not exist

2012-03-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
